Fixing a spacing issue for mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -9,5 +9,5 @@ div.a {
 
 
 div.b {
-  line-height: 0.4;
+  line-height: 1;
 }
